--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,13 +19,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
+										<li class="page-scroll">
+												<a href="#schedule">Schedule</a>
+										</li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#register">Register</a>
                     </li>
                 </ul>
             </div>
@@ -43,7 +43,7 @@
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+												<!--<span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>-->
                     </div>
                 </div>
             </div>
