--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include portfolio_grid.html %}
     {% include about.html %}
-    {% include contact.html %}
+		{% include schedule.html %}
+    {% include register.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
