merp new colors and such

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,19 +1,31 @@
 <!-- About Section -->
-<section id="about">
+<style>
+.about{
+	text-align:center;
+}
+
+.about .loc{
+	font-weight: bold;
+}
+
+
+</style>
+<section class="success" id="about">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
 				<h2>About</h2>
-				<hr class="star-primary">
+				<hr class="star-light">
 			</div>
 		</div>
-		<div class="row">
+		<div class="row about">
 			<div class="col-lg-4 col-lg-offset-2">
+				
 				<p>Hackhers is organized for women. At this hackathon, women and men will get involved in learning, planning and developing apps that will foster growth and productivity among women who want to code.  </p>
 			</div>
-			<div class="col-lg-4">
-				<p>Busch Campus Center, Rutgers University</p>
-				<p>604 Bartholomew Road <br>
+			<div class="col-lg-4 loc">
+				<p>Busch Campus Center, Rutgers University <br>
+				604 Bartholomew Road <br>
 				Piscataway, NJ 08854 </P>
 			</div>
 		</div>
