--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -1,16 +1,18 @@
-<section class="success" id="schedule">
+<section class="" id="schedule">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
 				<h2>Schedule</h2>
-				<hr class="star-light">
+				<hr class="star-primary">
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-4 col-lg-offset-2">
 				<style type="text/css">
 .tg1  {border-collapse:collapse;border-spacing:0;}
-.tg1 td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+.tg1 td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:none;
+	overflow:hidden;
+	word-break:normal;}
 .tg1 th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
 .tg1 .tg-hgcj{font-weight:bold;text-align:center}
 
@@ -19,19 +21,17 @@
 }
 
 .tg1 tr:nth-child(even) {
-	background-color:#d4cb6a;
+	background-color:#94dbff;
 }
 
 .tg1 tr:nth-child(odd){
-	background-color:#fff7aa;
+	background-color:#d4f1ff;
 }
 
 
 				</style>
+				<h3>Sunday</h3>
 				<table class="tg1">
-					<tr>
-						<th class="tg-hgcj" colspan="2">Saturday</th>
-					</tr>
 					<tr>
 						<td class="tg-031e">9:00 AM</td>
 						<td class="tg-031e">Check in begins</td>
@@ -40,8 +40,7 @@
 						<td class="tg-031e">10:30 AM</td>
 						<td class="tg-031e">API Demos begin</td>
 					</tr>
-					<tr>
-						<td class="tg-031e">12:00 PM</td>
+					<tr> <td class="tg-031e">12:00 PM</td>
 						<td class="tg-031e">Hacking begins</td>
 					</tr>
 					<tr>
@@ -58,7 +57,7 @@
 					</tr>
 					<tr>
 						<td class="tg-031e">5:00 PM </td>
-						<td class="tg-031e">Special snacks</td>
+						<td class="tg-031e">Early dinner</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">6:00 PM</td>
@@ -66,11 +65,11 @@
 					</tr>
 					<tr>
 						<td class="tg-031e">7:00 PM </td>
-						<td class="tg-031e">Dinner</td>
+						<td class="tg-031e">Snacks</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">10:30 PM </td>
-						<td class="tg-031e">Special snacks</td>
+						<td class="tg-031e">Late dinner </td>
 					</tr>
 				</table>
 			</div>
@@ -78,7 +77,7 @@
 				<p>
 				<style type="text/css">
 .tg2  {border-collapse:collapse;border-spacing:0;}
-.tg2 td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+.tg2 td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:none;overflow:hidden;word-break:normal;}
 .tg2 th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
 .tg2 .tg-hgcj{font-weight:bold;text-align:center}
 
@@ -87,24 +86,22 @@
 }
 
 .tg2 tr:nth-child(odd) {
-	background-color:#d4cb6a;
+	background-color:#94dbff;
 }
 
 .tg2 tr:nth-child(even){
-	background-color:#fff7aa;
+	background-color:#d4f1ff;
 }
 				</style>
+				<h3>Sunday</h3>
 				<table class="tg2">
-					<tr>
-						<th class="tg-hgcj" colspan="2">Sunday</th>
-					</tr>
 					<tr>
 						<td class="tg-031e">12:00 AM</td>
 						<td class="tg-031e">T-shirts</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">1:00 AM</td>
-						<td class="tg-031e">More food</td>
+						<td class="tg-031e">Snacks</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">5:00 AM</td>
@@ -128,7 +125,7 @@
 					</tr>
 					<tr>
 						<td class="tg-031e">9:00 AM</td>
-						<td class="tg-031e">Demos begin</td>
+						<td class="tg-031e">Demos begin &amp; Judging</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">10:00 AM</td>
