--- a/_includes/register.html
+++ b/_includes/register.html
@@ -1,9 +1,9 @@
-<section id="register">
+<section class="success" id="register">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
 				<h2>Register</h2>
-				<hr class="star-primary">
+				<hr class="star-light">
 			</div>
 		</div>
 		<div class="row">
