--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,10 @@
     {% include about.html %}
 		{% include schedule.html %}
     {% include register.html %}
+		{% include faq.html %}
+		{% include sponsors.html %}
+		{% include getinvolved.html %}
+		{% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
