--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -12,8 +12,19 @@
 				<hr class="star-light">
 			</div>
 		</div>
-		<div class="row">
-			<p class="center">Filler</p>
+		<div class="row center">
+			<p>You can email us at scarletwcs@gmail.com or use this form:</P>
+			<!-- Do not change the code! -->
+			<a id="foxyform_embed_link_624532" href="http://www.foxyform.com/">foxyform</a>
+			<script type="text/javascript">
+(function(d, t){
+ var g = d.createElement(t),
+ s = d.getElementsByTagName(t)[0];
+ g.src = "http://www.foxyform.com/js.php?id=624532&sec_hash=d978d857803&width=350px";
+ s.parentNode.insertBefore(g, s);
+ }(document, "script"));
+			</script>
+			<!-- Do not change the code! -->
 		</div>
 	</div>
 </section>
