--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -2,19 +2,19 @@
 <style>
 
 </style>
-<section class="success" id="sponsors">
+<section class="" id="sponsors">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
 				<h2>Sponsors</h2>
-				<hr class="star-light">
+				<hr class="star-primary">
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-6 col-sm-3">Filler</div>
-			<div class="col-xs-6 col-sm-3">Filler</div>
-			<div class="col-xs-6 col-sm-3">Filler</div>
-			<div class="col-xs-6 col-sm-3">Filler</div>
+			<div class="col-xs-6 col-sm-3"><img height=200 src="img/sponsors/att.png" /></div>
+			<div class="col-xs-6 col-sm-3"></div>
+			<div class="col-xs-6 col-sm-3"></div>
+			<div class="col-xs-6 col-sm-3"></div>
 
 		</div>
 	</div>
