--- a/_includes/getinvolved.html
+++ b/_includes/getinvolved.html
@@ -1,16 +1,16 @@
 <!-- About Section -->
 <style>
 </style>
-<section class="" id="getinvolved">
+<section class="success" id="getinvolved">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
 				<h2>Get Involved</h2>
-				<hr class="star-primary">
+				<hr class="star-light">
 			</div>
 		</div>
 		<div class="row about">
-			<p>Filler</p>
+			<p>For now, you can check out our <a href="https://www.facebook.com/events/1586774014877620">Facebook event page for Hackhers</a>.</p>
 		</div>
 	</div>
 </section>
