fixed the get involved url thing

--- a/_includes/getinvolved.html
+++ b/_includes/getinvolved.html
@@ -1,5 +1,12 @@
 <!-- About Section -->
 <style>
+.about a:link{
+	color: #{{ site.color.secondary }};
+}
+
+.about a:visited{
+	color: #{{ site.color.secondary }};
+}
 </style>
 <section class="success" id="getinvolved">
 	<div class="container">
