--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -12,8 +12,8 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-6 col-sm-3"><img height=200 src="img/sponsors/att.png" /></div>
-			<div class="col-xs-6 col-sm-3"></div>
-			<div class="col-xs-6 col-sm-3"></div>
+			<div class="col-xs-6 col-sm-3"><img height=200 src="img/sponsors/colpalm.jpg" /></div>
+			<div class="col-xs-6 col-sm-3"><img height=200 src="img/sponsors/ups.png" /></div>
 			<div class="col-xs-6 col-sm-3"></div>
 
 		</div>
