--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -11,10 +11,9 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-6 col-sm-3"><img height=200 src="img/sponsors/att.png" /></div>
-			<div class="col-xs-6 col-sm-3"><img height=200 src="img/sponsors/colpalm.jpg" /></div>
-			<div class="col-xs-6 col-sm-3"><img height=200 src="img/sponsors/ups.png" /></div>
-			<div class="col-xs-6 col-sm-3"></div>
+			<div class="col-xs-12 col-md-8"><img height=400  src="img/sponsors/att.png" /></div>
+			<div class="col-xs-6 col-md-4"><img height=200 src="img/sponsors/colpalm.jpg" /></div>
+			<div class="col-xs-6 col-md-4"><img height=200 src="img/sponsors/ups.png" /></div>
 
 		</div>
 	</div>
