--- a/_includes/getinvolved.html
+++ b/_includes/getinvolved.html
@@ -72,7 +72,7 @@
 			</div>
 		</div>
 		<div class="row about">
-			<p>For now, you can check out our <a href="https://www.facebook.com/events/1586774014877620">Facebook event page for Hackhers</a>.</p>
+			<p>You can check out our <a href="https://www.facebook.com/events/1586774014877620">Facebook event page for Hackhers</a>.</p>
 		</div>
 		<div class="row about">
 			<p> <a href="https://ruwcs.typeform.com/to/usqqiA" class="button white bigrounded">Sign Up As a Mentor</a> </p>
