--- a/_includes/getinvolved.html
+++ b/_includes/getinvolved.html
@@ -77,5 +77,8 @@
 		<div class="row about">
 			<p> <a href="https://ruwcs.typeform.com/to/usqqiA" class="button white bigrounded">Sign Up As a Mentor</a> </p>
 		</div>
+		<div class="row about">
+			<p> <a href="https://ruwcs.typeform.com/to/k3OIcm" class="button white bigrounded">Volunteer</a> </p>
+		</div>
 	</div>
 </section>
