--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,7 +51,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
-				<img class="img-responsive" src="img/profile.jpg" alt="">
+				<img class="img-responsive" src="img/profile.png" alt="">
 				<div class="intro-text">
 					<span class="name">February 7 & 8, 2015</span>
 					<hr class="star-primary">
