--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -11,9 +11,16 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 col-md-8"><img height=400  src="img/sponsors/att.png" /></div>
-			<div class="col-xs-6 col-md-4"><img height=200 src="img/sponsors/colpalm.jpg" /></div>
-			<div class="col-xs-6 col-md-4"><img height=200 src="img/sponsors/ups.png" /></div>
+			<!--
+				MOST: at&t
+				GOLD: bloom & ups 
+				BRONZE: tata & colpalm
+			-->
+			<div class="col-md-8"><img height=400  src="img/sponsors/att.png" /></div>
+			<div class=" col-md-4"><img height=200 src="img/sponsors/ups.png" /></div>
+			<div class=" col-md-4"><img height=200 src="img/sponsors/bloom.jpg" /></div>
+			<div class=" col-md-8"><img height=200 src="img/sponsors/tata.jpg" /></div>
+			<div class=" col-md-4"><img height=200 src="img/sponsors/colpalm.jpg" /></div>
 
 		</div>
 	</div>
