--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -13,10 +13,12 @@
 		<div class="row">
 			<!--
 				MOST: at&t
+				SILVER: verizon
 				GOLD: bloom & ups 
 				BRONZE: tata & colpalm
 			-->
 			<div class="col-md-8"><img height=400  src="img/sponsors/att.png" /></div>
+			<div class=" col-md-4"><img height=200 src="img/sponsors/verizon.jpg" /></div>
 			<div class=" col-md-4"><img height=200 src="img/sponsors/ups.png" /></div>
 			<div class=" col-md-4"><img height=200 src="img/sponsors/bloom.jpg" /></div>
 			<div class=" col-md-8"><img height=200 src="img/sponsors/tata.jpg" /></div>
