--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -19,7 +19,7 @@
 			-->
 			<div class="col-md-8"><img height=400  src="img/sponsors/att.png" /></div>
 			<div class=" col-md-4"><img height=200 src="img/sponsors/verizon.jpg" /></div>
-			<div class=" col-md-4"><img height=200 src="img/sponsors/gss" /></div>
+			<div class=" col-md-4"><img height=200 style="padding:10px;" src="img/sponsors/gss" /></div>
 			<div class=" col-md-4"><img height=200 src="img/sponsors/ups.png" /></div>
 			<div class=" col-md-4"><img height=200 src="img/sponsors/bloom.jpg" /></div>
 			<div class=" col-md-8"><img height=200 src="img/sponsors/tata.jpg" /></div>
