--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -53,7 +53,7 @@
 			</div>
 			<div class="col-xs-6 col-sm-3">
 				<P><Strong>Will reimbursements be provided?</strong></p>
-				People coming from NJ/NY will be offered a flat rate of $25 with receipt. everyone else will be by a case by case basis, as agreed before the hackathon, so feel free to contact us!
+				People coming from NJ/NY will be offered up to $25 with receipt. everyone else will be by a case by case basis, as agreed before the hackathon, so feel free to contact us!
 			</div>
 
 
