--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -29,7 +29,6 @@
 			</div>
 			<div class="col-xs-6 col-sm-3">
 				<P><Strong>I'm a man, can I still participate?</strong></p>
-				I'm a man; can I still participate?
 				Of course! While our target market consists of women, we welcome men as well. If you plan to work in a team with women, please 
 				let us know in your registration, and you will be given special consideration.
 			</div>
@@ -53,7 +52,8 @@
 			</div>
 			<div class="col-xs-6 col-sm-3">
 				<P><Strong>Will reimbursements be provided?</strong></p>
-				People coming from NJ/NY will be offered up to $25 with receipt. everyone else will be by a case by case basis, as agreed before the hackathon, so feel free to contact us!
+				People coming from NJ/NY /PA will be reimbursed up to $25 with travel receipts. People coming from outside of these areas will be reimbursed up to $100
+				with travel receipts. Feel free to contact us!
 			</div>
 
 
