--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,15 +3,7 @@
 	<div class="footer-above">
 		<div class="container">
 			<div class="row">
-				<div class="footer-col col-md-4">
-					<!--<h3>{{ site.footer.location }}</h3>
-												<p>
-														{% for adress in site.address %}
-																{{ adress.line }} <br>
-												{% endfor %}
-												</p>
-												-->
-				</div>
+				
 				<div class="footer-col col-md-4">
 					<!--<h3>{{ site.footer.social }}</h3>-->
 					<ul class="list-inline">
@@ -22,8 +14,11 @@
 						{% endfor %}
 					</ul>
 				</div>
-				<div class="footer-col col-md-4">
-					<p>{{ site.credits }}</p>
+				<div class="footer-col col-md-8">
+					<!--<p>{{ site.credits }}</p>-->
+					<div class="col-md-4"><img height=100 src="img/foot/dp.png"/></div>
+					<div class="col-md-4"><img height=100 src="img/foot/wcs.jpg"/></div>
+					<div class="col-md-4"><img height=100 src="img/foot/mlh.png"/></div>
 				</div>
 			</div>
 		</div>
