--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -33,43 +33,67 @@
 				<h3>Saturday</h3>
 				<table class="tg1">
 					<tr>
-						<td class="tg-031e">9:00 AM</td>
-						<td class="tg-031e">Check in begins</td>
+						<td class="tg-031e">8:00 AM</td>
+						<td class="tg-031e">Organizers arrive </td>
 					</tr>
 					<tr>
-						<td class="tg-031e">10:30 AM</td>
-						<td class="tg-031e">API Demos begin</td>
+						<td class="tg-031e">9:00 AM</td>
+						<td class="tg-031e">Check in begins near Center Hall</td>
 					</tr>
-					<tr> <td class="tg-031e">12:00 PM</td>
-						<td class="tg-031e">Hacking begins</td>
+					<tr>
+						<td class="tg-031e">9 - 11:00 AM</td>
+						<td class="tg-031e">Breakfast in International Lounge</td>
+					</tr>
+					<tr> <td class="tg-031e">11 AM - 12 PM</td>
+						<td class="tg-031e">API Demos in Center Hall</td>
+					</tr>
+					<tr>
+						<td class="tg-031e">12:00 PM</td>
+						<td class="tg-031e">Begin hacking &amp; Noobie meetup in Center Hall</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">12:30 PM</td>
-						<td class="tg-031e">Lunch is served</td>
+						<td class="tg-031e">Lunch yay</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">1:30 PM</td>
-						<td class="tg-031e">Intro to API's and Databases</td>
+						<td class="tg-031e">Prachi's workshop on APIs</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">2:30 PM</td>
-						<td class="tg-031e">Special snacks</td>
+						<td class="tg-031e">Snacks!</td>
 					</tr>
 					<tr>
-						<td class="tg-031e">5:00 PM </td>
-						<td class="tg-031e">Early dinner</td>
+						<td class="tg-031e">3 - 4:00 PM</td>
+						<td class="tg-031e">Data Visualization Talk by Luis Alejandro Vega (Bloomberg)</td>
+					</tr>
+					<tr>
+						<td class="tg-031e">4:30 - 5:30 PM </td>
+						<td class="tg-031e">Tech Talk #2 </td>
+					</tr>
+					<tr>
+						<td class="tg-031e">5:00 PM</td>
+						<td class="tg-031e">More snacks!!</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">6:00 PM</td>
-						<td class="tg-031e">Meetup &amp; Fun talk</td>
+						<td class="tg-031e">Meetup &amp; Salary Negotiation talk Center Hall by Dean Karen Alexander</td>
 					</tr>
 					<tr>
-						<td class="tg-031e">7:00 PM </td>
-						<td class="tg-031e">Snacks</td>
+						<td class="tg-031e">7:00 PM</td>
+						<td class="tg-031e">Dinner in International Lounge</td>
 					</tr>
 					<tr>
-						<td class="tg-031e">10:30 PM </td>
-						<td class="tg-031e">Late dinner </td>
+						<td class="tg-031e">7:30 - 8:30 PM</td>
+						<td class="tg-031e">Tech Talk #3</td>
+					</tr>
+					<tr>
+						<td class="tg-031e">9 - 10:00 PM</td>
+						<td class="tg-031e">Imposter Syndrome Talk by Elaine</td>
+					</tr>
+					<tr>
+						<td class="tg-031e">10:30 PM</td>
+						<td class="tg-031e">Even more snacks!!!</td>
 					</tr>
 				</table>
 			</div>
@@ -97,15 +121,15 @@
 				<table class="tg2">
 					<tr>
 						<td class="tg-031e">12:00 AM</td>
-						<td class="tg-031e">T-shirts</td>
+						<td class="tg-031e">T-shirts in International Lounge</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">1:00 AM</td>
-						<td class="tg-031e">Snacks</td>
+						<td class="tg-031e">Late night meal</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">5:00 AM</td>
-						<td class="tg-031e">More food</td>
+						<td class="tg-031e">Really early breakfast</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">6:00 AM</td>
@@ -113,15 +137,11 @@
 					</tr>
 					<tr>
 						<td class="tg-031e">6:30 AM</td>
-						<td class="tg-031e">Move to Welcome Center</td>
-					</tr>
-					<tr>
-						<td class="tg-031e">7:30 AM</td>
-						<td class="tg-031e">Setup for Demos</td>
+						<td class="tg-031e">Morning walk! to SERC 118 (the best wakeup call)</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">8:00 AM</td>
-						<td class="tg-031e">Breakfast</td>
+						<td class="tg-031e">Normal time breakfast</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">9:00 AM</td>
@@ -129,7 +149,7 @@
 					</tr>
 					<tr>
 						<td class="tg-031e">10:00 AM</td>
-						<td class="tg-031e">Closing ceremony</td>
+						<td class="tg-031e">Closing ceremony &amp; Winner announcements</td>
 					</tr>
 				</table>
 			</div>
