even more sponsorsgit add ../img

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -24,6 +24,7 @@
 			<div class=" col-md-4"><img height=200 src="img/sponsors/bloom.jpg" /></div>
 			<div class=" col-md-8"><img height=200 src="img/sponsors/tata.jpg" /></div>
 			<div class=" col-md-4"><img height=200 src="img/sponsors/colpalm.jpg" /></div>
+			<div class=" col-md-4"><img height=200 src="img/sponsors/prud.jpg" /></div>
 
 		</div>
 	</div>
