--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -33,10 +33,6 @@
 				<h3>Saturday</h3>
 				<table class="tg1">
 					<tr>
-						<td class="tg-031e">8:00 AM</td>
-						<td class="tg-031e">Organizers arrive </td>
-					</tr>
-					<tr>
 						<td class="tg-031e">9:00 AM</td>
 						<td class="tg-031e">Check in begins near Center Hall</td>
 					</tr>
@@ -53,10 +49,10 @@
 					</tr>
 					<tr>
 						<td class="tg-031e">12:30 PM</td>
-						<td class="tg-031e">Lunch yay</td>
+						<td class="tg-031e">Lunch &amp; Beginner Coding Talks</td>
 					</tr>
 					<tr>
-						<td class="tg-031e">1:30 PM</td>
+						<td class="tg-031e">2:00 PM</td>
 						<td class="tg-031e">Prachi's workshop on APIs</td>
 					</tr>
 					<tr>
@@ -64,11 +60,11 @@
 						<td class="tg-031e">Snacks!</td>
 					</tr>
 					<tr>
-						<td class="tg-031e">3 - 4:00 PM</td>
+						<td class="tg-031e">3:00 PM</td>
 						<td class="tg-031e">Data Visualization Talk by Luis Alejandro Vega (Bloomberg)</td>
 					</tr>
 					<tr>
-						<td class="tg-031e">4:30 - 5:30 PM </td>
+						<td class="tg-031e">4:30 PM</td>
 						<td class="tg-031e">Tech Talk #2 </td>
 					</tr>
 					<tr>
@@ -84,12 +80,12 @@
 						<td class="tg-031e">Dinner in International Lounge</td>
 					</tr>
 					<tr>
-						<td class="tg-031e">7:30 - 8:30 PM</td>
-						<td class="tg-031e">Tech Talk #3</td>
+						<td class="tg-031e">7:30 PM</td>
+						<td class="tg-031e">AT&amp;T Tech Talk</td>
 					</tr>
 					<tr>
-						<td class="tg-031e">9 - 10:00 PM</td>
-						<td class="tg-031e">Imposter Syndrome Talk by Elaine</td>
+						<td class="tg-031e">9:00 PM</td>
+						<td class="tg-031e">Cupcakes &amp; Imposter Syndrome Talk by Elaine</td>
 					</tr>
 					<tr>
 						<td class="tg-031e">10:30 PM</td>
@@ -144,7 +140,7 @@
 						<td class="tg-031e">Normal time breakfast</td>
 					</tr>
 					<tr>
-						<td class="tg-031e">9:00 AM</td>
+						<td class="tg-031e">8:30 AM</td>
 						<td class="tg-031e">Demos begin &amp; Judging</td>
 					</tr>
 					<tr>
